tests/baselines/reference/errorForwardReferenceForwadingConstructor.errors.txt
tests/cases/compiler/errorForwardReferenceForwadingConstructor.ts(4,14): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/errorForwardReferenceForwadingConstructor.ts (1 errors) ====
    // Error forward referencing derived class with forwarding constructor
    
    function f() {
        var d1 = new derived();
                 ~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
        var d2 = new derived(4);
    }
    
    class base { constructor(public n: number) { } }
    class derived extends base { }
    